# SentinelAI_Nids

./: README.md  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/models/LSTM/: lstm_autoencoder.onnx  lstm_autoencoder.pt  lstm_scaler.pkl  lstm_threshold.npy
src-tauri/models/XGBoost/: label_encoder.pkl  scaler.pkl
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: helpers.rs  macros.rs  mod.rs  networks.rs  python_runner.rs  structures.rs
src-tauri/subsystem/: helper.py  worker.py
src/Components/: DashBoard.jsx  Header.jsx  NetworkCard.jsx  NetworkModel.jsx  QuickActions.jsx  RecentActivity.jsx  StatusBadge.jsx  ThreatSummary.jsx
